@@ -702,18 +702,12 @@ ACE_INET_Addr::ACE_INET_Addr (const char port_name[],
   : ACE_Addr (determine_type (), sizeof (inet_addr_))
 {
   ACE_TRACE ("ACE_INET_Addr::ACE_INET_Addr");
-#if !defined (ACE_LACKS_HTONL)
   this->reset ();
   if (this->set (port_name,
-                 htonl (inet_address),
+                 ACE_HTONL (inet_address),
                  protocol) == -1)
     ACE_ERROR ((LM_ERROR,
                 ACE_TEXT ("ACE_INET_Addr::ACE_INET_Addr")));
-#else
-  ACE_UNUSED_ARG (port_name);
-  ACE_UNUSED_ARG (inet_address);
-  ACE_UNUSED_ARG (protocol);
-#endif
 }
 
 #if defined (ACE_HAS_WCHAR)
@@ -723,18 +717,12 @@ ACE_INET_Addr::ACE_INET_Addr (const wchar_t port_name[],
   : ACE_Addr (determine_type (), sizeof (inet_addr_))
 {
   ACE_TRACE ("ACE_INET_Addr::ACE_INET_Addr");
-#if !defined (ACE_LACKS_HTONL)
   this->reset ();
   if (this->set (port_name,
-                 htonl (inet_address),
+                 ACE_HTONL (inet_address),
                  protocol) == -1)
     ACE_ERROR ((LM_ERROR,
                 ACE_TEXT ("ACE_INET_Addr::ACE_INET_Addr")));
-#else
-  ACE_UNUSED_ARG (port_name);
-  ACE_UNUSED_ARG (inet_address);
-  ACE_UNUSED_ARG (protocol);
-#endif
 }
 #endif /* ACE_HAS_WCHAR */
 
